# ProCalc

./: Makefile.am  NEWS  ProCalc-1.0-1.el7.centos.x86_64.rpm  ProCalc.1  README  README.md  configure.ac  index.html
autom4te.cache/: output.0  requests  traces.0
css/: style.css
doc/: README
docs/css/: style.css
man/: Makefile.am
src/: .gitignore  CMakeLists.txt  Makefile.am  main.cpp
src/headers/: Combinatorics.h  TeoriaVer.h  bigint.h  config.h  derivative.h  fraction.h  func_menu.h  graph.h  header.h  input.h  integral.h  matrix.h  polynom.h  root.h
src/libs/: Combinatorics.cpp  Combinatorics_menu.cpp  bigint.cpp  fraction.cpp  fraction_menu.cpp  func.ter.ver.cpp  func_menu.cpp  graph.cpp  input.cpp  integral.cpp  main_menu.cpp  matrix.cpp  matrix_main.cpp  polynom.lib.cpp  polynom.main.cpp  root.cpp  ter.ver.menu.cpp
